# pythonassignment

./: papers.csv
my-python-project/: README.md  get-papers-list  pyproject.toml
my-python-project/papers/: fetch_papers.py
my-python-project/tests/: test_fetch_papers.py
paper-fetcher/: README.md  requirements-dev.txt   # (add this file for development dependencies)  setup.py
paper-fetcher/src/: cli.py
paper-fetcher/src/paper_fetcher/: fetcher.py  utils.py
paper-fetcher/tests/: test_fetcher.py
