[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech affiliations and output to CSV."
authors = ["Your Name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "get-papers-list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"